# rexlists

./: Cargo.toml  README.md
backend/src/: main.rs
frontend/: Cargo.toml
frontend/src/: main.rs
