[workspace]
resolver = "3"
members = ["backend", "frontend"]

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[workspace.lints.rust]
missing_docs = { level = "warn" }
unsafe_code = { level = "forbid" }
